objects/CountryChannelUserRegistration__c.object
<CustomObject>
    <fields>
        <fullName>AdvancedSearch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>field to decide whether it should be included in predictive search</description>
        <label>Advanced Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CountryChannels__c</fullName>
        <description>Country Channel</description>
        <label>Country Channel</label>
        <referenceTo>CountryChannels__c</referenceTo>
        <relationshipLabel>Registration Form Fields</relationshipLabel>
        <relationshipName>CountryChannelUserRegistrationFields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DefaultValue__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnableUsermindIntegration__c</fullName>
        <formula>IF( OR( HiddenOnProfile__c, Hidden__c ) , FALSE, TRUE)</formula>
        <label>Enable Usermind Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expression__c</fullName>
        <label>Expression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HiddenOnProfile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PRM 2015 - Determines whether the form field should be hidden on My Profile section</description>
        <label>Hidden On Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden form the country &amp; channel</description>
        <label>Hidden On User Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideField__c</fullName>
        <label>Hide</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>URONLY</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
                <value>
                    <fullName>PROFONLY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MandatoryOnProfile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandatory On Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if field is mandatory for that country &amp; channel</description>
        <label>Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PublishingDescription__c</fullName>
        <description>Small description of last publication</description>
        <inlineHelpText>Small description of last publication</inlineHelpText>
        <label>PublishingDescription</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PublishingGoldenId__c</fullName>
        <description>Track the source Id</description>
        <inlineHelpText>Track the source Id</inlineHelpText>
        <label>PublishingGoldenId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishingIsUpdated__c</fullName>
        <description>Identify if the record has been updated</description>
        <formula>IF( OR(LastModifiedDate  &gt; PublishingTimestamp__c,ISBLANK(PublishingTimestamp__c)),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identify if the record has been updated</inlineHelpText>
        <label>PublishingIsUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PublishingOdasevaId__c</fullName>
        <externalId>true</externalId>
        <label>PublishingOdasevaId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishingPublisher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Track who was the last publisher</description>
        <inlineHelpText>Track who was the last publisher</inlineHelpText>
        <label>PublishingPublisher</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PublisherCountryChannelUserRegistrationc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PublishingStatusImage__c</fullName>
        <description>Identify at first sight that the record is set for publication</description>
        <formula>CASE(TEXT(PublishingStatus__c),&quot;Ready for Publication&quot;,IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Ready for Publication&quot;),&quot;Awaiting Publication&quot;,IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Awaiting Publication&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identify at first sight that the record is set for publication</inlineHelpText>
        <label>PublishingStatusImage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishingStatus__c</fullName>
        <label>PublishingStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready for Publication</fullName>
                </value>
                <value>
                    <fullName>Awaiting Publication</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PublishingTimestamp__c</fullName>
        <description>Date and time of the last publication</description>
        <inlineHelpText>Date and time of the last publication</inlineHelpText>
        <label>PublishingTimestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TECH_MigrationUniqueID__c</fullName>
        <description>Unique ID to be used by ODASEVA for synchronizing the records between environments</description>
        <externalId>true</externalId>
        <label>Migration Unique ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_UserRegFieldName__c</fullName>
        <description>This field is used to copy the custom setting(CS_PRM_UserRegistration) value of this field.</description>
        <label>Field Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserRegFieldName__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidationType__c</fullName>
        <label>Validation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Regex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Country Channel User Registration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CountryChannels__c</columns>
        <columns>TECH_UserRegFieldName__c</columns>
        <columns>Mandatory__c</columns>
        <columns>HideField__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SESA108112</fullName>
        <columns>NAME</columns>
        <columns>TECH_UserRegFieldName__c</columns>
        <columns>Mandatory__c</columns>
        <columns>HideField__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CountryChannels__c</field>
            <operation>equals</operation>
            <value>CCN-0003335</value>
        </filters>
        <label>PRM Spain - SC/SC7</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SESA108112_2</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>TECH_UserRegFieldName__c</columns>
        <columns>Mandatory__c</columns>
        <columns>MandatoryOnProfile__c</columns>
        <columns>HideField__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Mandatory__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>HideField__c</field>
            <operation>equals</operation>
            <value>URONLY,BOTH</value>
        </filters>
        <filters>
            <field>TECH_UserRegFieldName__c</field>
            <operation>notEqual</operation>
            <value>Contact: Business Type</value>
        </filters>
        <filters>
            <field>TECH_UserRegFieldName__c</field>
            <operation>notEqual</operation>
            <value>Contact: Area of Focus</value>
        </filters>
        <label>Configuration error ?</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CCR-{0000000000}</displayFormat>
        <label>Country Channel User Registration</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Country Channel User Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>